src/global.css
.ASS-box {
  font-family: Arial;
  overflow: hidden;
  pointer-events: none;
  position: absolute;
}
.ASS-dialogue {
  font-size: 0;
  width: max-content;
  position: absolute;
  z-index: 0;
  transform: translate(calc(var(--ass-align-h) * -1), calc(var(--ass-align-v) * -1));
}
.ASS-dialogue span {
  display: inline-block;
}
.ASS-dialogue [data-text] {
  display: inline-block;
  color: var(--ass-fill-color);
  font-size: calc(var(--ass-scale) * var(--ass-real-fs) * 1px);
  line-height: calc(var(--ass-scale) * var(--ass-tag-fs) * 1px);
  letter-spacing: calc(var(--ass-scale) * var(--ass-tag-fsp) * 1px);
}
.ASS-dialogue[data-wrap-style="0"],
.ASS-dialogue[data-wrap-style="3"] {
  text-wrap: balance;
}
.ASS-dialogue[data-wrap-style="1"] {
  word-break: break-word;
  white-space: normal;
}
.ASS-dialogue[data-wrap-style="2"] {
  word-break: normal;
  white-space: nowrap;
}
.ASS-dialogue [data-border-style="1"] {
  position: relative;
  /* for \bord0\blur4 */
  filter: blur(calc(
    var(--ass-tag-blur)
    * calc(1 - sign(var(--ass-tag-xbord)))
    * calc(1 - sign(var(--ass-tag-ybord)))
    * 1px
  ));
}
.ASS-dialogue [data-border-style="1"]::before,
.ASS-dialogue [data-border-style="1"]::after {
  content: attr(data-text);
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  filter: blur(calc(var(--ass-tag-blur) * 1px));
}
.ASS-dialogue [data-border-style="1"]::before {
  color: var(--ass-shadow-color);
  transform: translate(
    calc(var(--ass-scale-stroke) * var(--ass-tag-xshad) * 1px),
    calc(var(--ass-scale-stroke) * var(--ass-tag-yshad) * 1px)
  );
  -webkit-text-stroke: var(--ass-border-width) var(--ass-shadow-color);
  text-shadow: var(--ass-shadow-delta);
  opacity: var(--ass-shadow-opacity);
}
.ASS-dialogue [data-border-style="1"]::after {
  color: transparent;
  -webkit-text-stroke: var(--ass-border-width) var(--ass-border-color);
  text-shadow: var(--ass-border-delta);
  opacity: var(--ass-border-opacity);
}
.ASS-dialogue [data-border-style="3"] {
  padding:
    calc(var(--ass-scale-stroke) * var(--ass-tag-xbord) * 1px)
    calc(var(--ass-scale-stroke) * var(--ass-tag-ybord) * 1px);
  position: relative;
  filter: blur(calc(var(--ass-tag-blur) * 1px));
}
.ASS-dialogue [data-border-style="3"]::before,
.ASS-dialogue [data-border-style="3"]::after {
  content: "";
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: -1;
}
.ASS-dialogue [data-border-style="3"]::before {
  background-color: var(--ass-shadow-color);
  left: calc(var(--ass-scale-stroke) * var(--ass-tag-xshad) * 1px);
  top: calc(var(--ass-scale-stroke) * var(--ass-tag-yshad) * 1px);
}
.ASS-dialogue [data-border-style="3"]::after {
  background-color: var(--ass-border-color);
  left: 0;
  top: 0;
}
@container style(--ass-tag-xbord: 0) and style(--ass-tag-ybord: 0) {
  .ASS-dialogue [data-border-style="3"]::after {
    background-color: transparent;
  }
}
@container style(--ass-tag-xshad: 0) and style(--ass-tag-yshad: 0) {
  .ASS-dialogue [data-border-style="3"]::before {
    background-color: transparent;
  }
}
.ASS-dialogue [data-rotate] {
  /* TODO: {\an5\fs80\bord0\shad60\frx30\frz30\fry30}1234567890 */
  /* https://github.com/libass/libass/issues/805 */
  transform: perspective(312.5px)
    rotateY(calc(var(--ass-tag-fry) * 1deg))
    rotateX(calc(var(--ass-tag-frx) * 1deg))
    rotateZ(calc(var(--ass-tag-frz) * -1deg));
}
.ASS-dialogue [data-text][data-rotate] {
  transform-style: preserve-3d;
  word-break: normal;
  white-space: nowrap;
}
.ASS-dialogue [data-scale],
.ASS-dialogue [data-skew] {
  display: inline-block;
  transform: scale(var(--ass-tag-fscx), var(--ass-tag-fscy))
    skew(calc(var(--ass-tag-fax) * 1rad), calc(var(--ass-tag-fay) * 1rad));
  transform-origin: var(--ass-align-h) var(--ass-align-v);
}
.ASS-fix-font-size {
  font-family: Arial;
  line-height: normal;
  width: 0;
  height: 0;
  position: absolute;
  visibility: hidden;
  overflow: hidden;
}
.ASS-fix-font-size span {
  position: absolute;
}
.ASS-clip-area {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
}
.ASS-effect-area {
  position: absolute;
  display: flex;
  width: 100%;
  height: fit-content;
  overflow: hidden;
  mask-composite: intersect;
}
.ASS-effect-area[data-effect="banner"] {
  flex-direction: column;
  height: 100%;
}
.ASS-effect-area .ASS-dialogue {
  position: static;
  transform: none;
}

